--- a/index.html
+++ b/index.html
@@ -800,7 +800,8 @@
       <div class="intro-content">
         <h4>UseRef
           <p>- The useRef Hook allows you to persist values between renders.</p>
-          <p>- It can be used to store a mutable value that does not cause a re-render when updated.</p>
+          <p>- It can be used to store a mutable value that 
+            does not cause a re-render when updated.</p>
           <p>- It can be used to access a DOM element directly.</p>
         </h4>
         <h4>Accessing DOM Elements
